Updated w-layout-grid qstack_c2

--- a/public/funds.html
+++ b/public/funds.html
@@ -180,7 +180,7 @@
                     <div class="skel_checkout_funds">
                       <div class="skel_checkout_bg"></div>
                     </div>
-                    <div class="w-layout-layout qstack_c2 wf-layout-layout">
+                    <div class="w-layout-grid qstack_c2">
                       <div class="w-layout-cell lt_c">
                         <div class="sect_crd_subtxt white">Upcoming</div>
                       </div>
@@ -192,7 +192,7 @@
                     </div>
                     <div class="allo_crd_dvdr"></div>
                     <div class="checkout_det_wrp">
-                      <div class="w-layout-layout qstack_c2 wf-layout-layout">
+                      <div class="w-layout-grid qstack_c2">
                         <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt">Renewing Soon</div>
                         </div>
@@ -200,7 +200,7 @@
                           <div checkout_upcoming="renewing_soon" class="sect_crd_subtxt white">$0</div>
                         </div>
                       </div>
-                      <div class="w-layout-layout qstack_c2 wf-layout-layout">
+                      <div class="w-layout-grid qstack_c2">
                         <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt">Expiring Soon</div>
                         </div>
@@ -208,7 +208,7 @@
                           <div checkout_upcoming="expiring_soon" class="sect_crd_subtxt white">$0</div>
                         </div>
                       </div>
-                      <div funds_line="required" class="w-layout-layout qstack_c2 wf-layout-layout">
+                      <div funds_line="required" class="w-layout-grid qstack_c2">
                         <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt_wrp">
                             <div class="sect_crd_subtxt white">Total Upcoming</div>
@@ -225,7 +225,7 @@
                     <div class="skel_checkout_funds">
                       <div class="skel_checkout_bg"></div>
                     </div>
-                    <div class="w-layout-layout qstack_c2 wf-layout-layout">
+                    <div class="w-layout-grid qstack_c2">
                       <div class="w-layout-cell lt_c">
                         <div class="sect_crd_subtxt white">Order</div>
                       </div>
@@ -237,7 +237,7 @@
                     </div>
                     <div class="allo_crd_dvdr"></div>
                     <div class="checkout_det_wrp">
-                      <div class="w-layout-layout qstack_c2 wf-layout-layout">
+                      <div class="w-layout-grid qstack_c2">
                         <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt purple">Amount Selected</div>
                         </div>
@@ -245,7 +245,7 @@
                           <div due_total="5" due="total" class="sect_crd_subtxt purple">$5</div>
                         </div>
                       </div>
-                      <div funds_line="required" class="w-layout-layout qstack_c2 wf-layout-layout">
+                      <div funds_line="required" class="w-layout-grid qstack_c2">
                         <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt_wrp">
                             <div class="sect_crd_subtxt white">Funds Required</div>
@@ -262,7 +262,7 @@
                     <div class="skel_checkout_funds">
                       <div class="skel_checkout_bg"></div>
                     </div>
-                    <div class="w-layout-layout qstack_c2 wf-layout-layout">
+                    <div class="w-layout-grid qstack_c2">
                       <div class="w-layout-cell lt_c">
                         <div class="sect_crd_subtxt white">Wallet</div>
                       </div>
@@ -274,7 +274,7 @@
                     </div>
                     <div class="allo_crd_dvdr"></div>
                     <div class="checkout_det_wrp">
-                      <div class="w-layout-layout qstack_c2 wf-layout-layout">
+                      <div class="w-layout-grid qstack_c2">
                         <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt">Current Funds</div>
                         </div>
@@ -282,7 +282,7 @@
                           <div funds_total="0" checkout_funds="total" class="sect_crd_subtxt white">$0</div>
                         </div>
                       </div>
-                      <div class="w-layout-layout qstack_c2 wf-layout-layout">
+                      <div class="w-layout-grid qstack_c2">
                         <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt green">Funds After</div>
                         </div>
@@ -290,7 +290,7 @@
                           <div checkout_funds="after" class="sect_crd_subtxt green">$0</div>
                         </div>
                       </div>
-                      <div funds_line="required" class="w-layout-layout qstack_c2 wf-layout-layout">
+                      <div funds_line="required" class="w-layout-grid qstack_c2">
                         <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt_wrp">
                             <div class="sect_crd_subtxt white">Funds Required</div>
