Update API Reference link in developers.html
Changed the URL of the "API Reference" link in the developers.html file. The URL was previously pointed to an external domain "illusory.io/docs" which is now redirected to a local document "/docs/api-reference/introduction". This was done to ensure that users are directed to the most current and relevant documentation within the same site by default.

--- a/public/settings/developers.html
+++ b/public/settings/developers.html
@@ -230,7 +230,7 @@ input[type=number] {
         <div class="sect_crds_content--inner sb fw">
           <div class="sect_crd long1">
             <div class="sect_crd_tit_wrp w-clearfix">
-              <a href="https://illusory.io/docs" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
+              <a href="/docs/api-reference/introduction" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
                 <div class="sect_crd_rt_cta_txt">API Reference</div><img src="../images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
               </a>
               <div class="sect_crd_tit w-clearfix">
