--- a/public/settings/account.html
+++ b/public/settings/account.html
@@ -235,14 +235,13 @@ input[type=number] {
     <div errDiv="small" class="alert_wrp_small sb">
       <div class="w-layout-grid alert_wrp_small_grid">
         <div class="dialog_txt_item">
-          <div err_alert_ind="true" class="err_alert_ind_small orange"></div>
-          <div id="errTxtSmall" class="dialog_txt alt">Error</div>
-        </div>
-        <div class="alert_small_grid_item right">
-          <div class="btn_ldr_wrp w-embed">
-            <lottie-player class="lottie_btn_ldr _17_2" err_item_ldr="realtime" src="https://lottie.host/79a0a014-ba6e-4031-b331-2f5259d09f50/YpYY2Fm3RC.json">
-            </lottie-player>
+          <div err_alert_ind="true" class="err_alert_ind_small orange">
+            <div class="btn_ldr_wrp w-embed">
+              <lottie-player class="lottie_btn_ldr realtime" err_item_ldr="realtime" src="../documents/realtime-loader-cropped.json" background="transparent" style="display: flex;">
+              </lottie-player>
+            </div>
           </div>
+          <div id="errTxtSmall" class="dialog_txt alt">Error</div>
         </div>
       </div>
     </div>
@@ -272,12 +271,7 @@ input[type=number] {
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61e7cdbd824d2f94d05c4edc" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
-  <script>
-$("#signOutLink").click(function () {
-  window.localStorage.clear();
-  window.location.replace("/");
-});
-</script>
+
   <script src="https://scripts.illusory.io/scripts/pages/account.full.js"></script>
   <script>
 $(document).ready(function () {
