--- a/public/new.html
+++ b/public/new.html
@@ -676,7 +676,7 @@
                         <div checkout_funds="total" class="sect_crd_subtxt white">$0</div>
                       </div>
                     </div>
-                    <div funds_line="required" class="w-layout-grid qstack_c2">
+                    <div funds_line="required" class="w-layout-grid qstack_c2 hide">
                       <div class="w-layout-cell lt_c">
                         <div class="sect_crd_subtxt_wrp">
                           <div class="sect_crd_subtxt white">Funds Required</div>
