Update CSS class to streamline checkout page display
The CSS class "wf-layout-layout" was removed from several elements on the checkout page to improve the user interface. This amendment helps declutter the checkout page from confusing elements like the 'Funds Required' section, directing users' attention to current and pertinent pricing details.

--- a/public/new.html
+++ b/public/new.html
@@ -345,7 +345,7 @@
                   <div class="skel_checkout">
                     <div class="skel_checkout_bg"></div>
                   </div>
-                  <div class="w-layout-layout qstack_tit wf-layout-layout">
+                  <div class="w-layout-layout qstack_tit">
                     <div class="w-layout-cell">
                       <div class="sect_crd_subtxt_wrp">
                         <div class="sect_crd_subtxt white">Product</div>
@@ -395,7 +395,7 @@
                   <div class="skel_checkout taller">
                     <div class="skel_checkout_bg"></div>
                   </div>
-                  <div class="w-layout-layout qstack_tit wf-layout-layout">
+                  <div class="w-layout-layout qstack_tit">
                     <div class="w-layout-cell fw_c">
                       <div class="sect_crd_subtxt_wrp">
                         <div class="sect_crd_subtxt white">Price Per Proxy</div>
@@ -612,7 +612,7 @@
                   <div class="skel_checkout taller">
                     <div class="skel_checkout_bg"></div>
                   </div>
-                  <div class="w-layout-layout qstack_tit wf-layout-layout">
+                  <div class="w-layout-layout qstack_tit">
                     <div class="w-layout-cell fw_c">
                       <div class="sect_crd_subtxt_wrp">
                         <div class="sect_crd_subtxt white">Time</div>
@@ -698,7 +698,7 @@
                   </div>
                   <div class="checkout_dvdr_24"></div>
                   <div class="w-layout-hflex">
-                    <div class="w-layout-layout qstack_c2 link wf-layout-layout">
+                    <div class="w-layout-grid qstack_c2 link">
                       <div class="w-layout-cell lt_c">
                         <div class="sect_crd_subtxt_wrp">
                           <div is_member="false" checkout_text="member_discount" class="sect_crd_subtxt white">Member Discount Inactive</div>
