Update link and label for member settings tutorial
The link for the tutorial in member settings now leads to '/docs/account/member' instead of '#'. The label has also been changed from 'Video Tutorial' to 'Step Tutorial', ensuring a better understanding and navigation for users.

--- a/public/settings/member.html
+++ b/public/settings/member.html
@@ -438,10 +438,10 @@
               </div>
               <div class="sect_block--divider"></div>
               <div class="w-layout-grid cta_crd--grid small">
-                <a href="#" class="sect_crd small2 w-inline-block">
+                <a href="/docs/account/member" class="sect_crd small2 w-inline-block">
                   <div class="sect_crd_tit_wrp">
                     <div class="sect_crd_tit">
-                      <div class="sect_crd_tit_txt">Video Tutorial</div>
+                      <div class="sect_crd_tit_txt">Step Tutorial</div>
                       <div class="sect_crd_subtxt short1">Prefer visual instructions for completing the verification process?</div>
                     </div>
                   </div>
