Update internal URL references
All internal URL references have been updated by removing the .html extension from the file name. This change aligns with modern web practices and improves the overall website performance and SEO ranking.

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -416,7 +416,7 @@ input[type=number] {
     <div id="nav_sb" class="nav_sb">
       <div class="w-layout-blockcontainer top_nav--wrp w-container">
         <div class="sb_logo--wrp">
-          <a href="index.html" class="sb_logo_link--wrp w-inline-block"><img src="images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
+          <a href="index" class="sb_logo_link--wrp w-inline-block"><img src="images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
         </div>
         <div class="srchbr--wrp">
           <div id="cmdb" class="cmd_bar"><img src="images/search-lg.svg" loading="lazy" width="14" height="14" alt="" class="image-14">
@@ -428,16 +428,16 @@ input[type=number] {
         </div>
         <div class="top_nav_menu_link--wrp">
           <div class="top_nav_menu_items--wrp">
-            <a href="index.html" class="top_nav--link start w-inline-block">
+            <a href="index" class="top_nav--link start w-inline-block">
               <div class="top_nav_link--text">Get Started</div>
             </a>
-            <a href="new.html" class="top_nav--link add w-inline-block">
+            <a href="new" class="top_nav--link add w-inline-block">
               <div class="top_nav_link--text">Add Proxies</div>
             </a>
-            <a href="allocate.html" class="top_nav--link allocate w-inline-block">
+            <a href="allocate" class="top_nav--link allocate w-inline-block">
               <div class="top_nav_link--text">Extend Time</div>
             </a>
-            <a href="funds.html" class="top_nav--link wallet w-inline-block">
+            <a href="funds" class="top_nav--link wallet w-inline-block">
               <div class="top_nav_link--text">Fund Wallet</div>
             </a>
           </div>
@@ -447,7 +447,7 @@ input[type=number] {
         <a href="#" class="bttm_nav--link support cmdbhelp--nav w-inline-block">
           <div class="bttm_nav_link--text">Support</div>
         </a>
-        <a href="settings/account.html" class="bttm_nav--link settings w-inline-block">
+        <a href="settings/account" class="bttm_nav--link settings w-inline-block">
           <div class="bttm_nav_link--text">Settings</div>
         </a>
         <div class="user_btn--wrap">
@@ -1048,7 +1048,7 @@ input[type=number] {
                             </div>
                           </div>
                           <div class="modal_config_title_grid--item w-clearfix">
-                            <a href="allocate.html" target="_blank" class="modal_config_link--wrap right expire w-inline-block">
+                            <a href="allocate" target="_blank" class="modal_config_link--wrap right expire w-inline-block">
                               <div class="modal_config--text bright">Manage</div>
                             </a>
                           </div>
