--- a/public/dev-module.html
+++ b/public/dev-module.html
@@ -1505,17 +1505,17 @@ $item-height: 220px;
           <div class="b-modal-nav-wrap">
             <div class="b-modal-nav">
               <div class="modal-nav-link-wrap">
-                <a href="new.html" class="b-modal-nav-link add-proxy w-inline-block">
+                <a href="new" class="b-modal-nav-link add-proxy w-inline-block">
                   <div class="bttm_nav_link--text">Add Proxy</div>
                 </a>
               </div>
               <div class="modal-nav-link-wrap">
-                <a href="funds.html" class="b-modal-nav-link fund-wallet w-inline-block"><img src="images/top-bottom-arrows.svg" loading="lazy" width="9" alt="" class="top-bottom-arrows">
+                <a href="funds" class="b-modal-nav-link fund-wallet w-inline-block"><img src="images/top-bottom-arrows.svg" loading="lazy" width="9" alt="" class="top-bottom-arrows">
                   <div class="bttm_nav_link--text">Fund Wallet</div>
                 </a>
               </div>
               <div class="modal-nav-link-wrap">
-                <a href="allocate.html" class="b-modal-nav-link manage-exp w-inline-block">
+                <a href="allocate" class="b-modal-nav-link manage-exp w-inline-block">
                   <div class="bttm_nav_link--text">Time Management</div>
                 </a>
               </div>
@@ -1547,7 +1547,7 @@ $item-height: 220px;
             </a>
           </div>
           <div class="bttm_nav_link--wrp">
-            <a href="settings/developers.html" class="bttm_nav--link settings w-inline-block">
+            <a href="settings/developers" class="bttm_nav--link settings w-inline-block">
               <div class="bttm_nav_link--text">Settings</div>
             </a>
           </div>
