--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
       <div id="nav_sb" class="nav_sb">
         <div class="w-layout-blockcontainer top_nav--wrp w-container">
           <div class="sb_logo--wrp">
-            <a href="index.html" aria-current="page" class="sb_logo_link--wrp w-inline-block w--current"><img src="images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
+            <a href="index" aria-current="page" class="sb_logo_link--wrp w-inline-block w--current"><img src="images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
           </div>
           <div class="srchbr--wrp">
             <div id="cmdb" class="cmd_bar"><img src="images/search-lg.svg" loading="lazy" width="14" height="14" alt="" class="image-14">
@@ -83,21 +83,21 @@
           </div>
           <div class="top_nav_menu_link--wrp">
             <div class="top_nav_menu_items--wrp">
-              <a href="index.html" aria-current="page" class="top_nav--link start w-inline-block w--current">
+              <a href="index" aria-current="page" class="top_nav--link start w-inline-block w--current">
                 <div class="top_nav_link--text">Get Started</div>
               </a>
-              <a href="new.html" class="top_nav--link add w-inline-block">
+              <a href="new" class="top_nav--link add w-inline-block">
                 <div class="top_nav_link--text">Add Proxies</div>
               </a>
-              <a href="allocate.html" class="top_nav--link allocate w-inline-block">
+              <a href="allocate" class="top_nav--link allocate w-inline-block">
                 <div class="top_nav_link--text">Extend Time</div>
               </a>
-              <a href="funds.html" class="top_nav--link wallet w-inline-block">
+              <a href="funds" class="top_nav--link wallet w-inline-block">
                 <div class="top_nav_link--text">Fund Wallet</div>
               </a>
             </div>
             <div class="sb_btn--wrp w-clearfix">
-              <a href="dashboard.html" class="sb_btn black w-inline-block w-clearfix">
+              <a href="dashboard" class="sb_btn black w-inline-block w-clearfix">
                 <div checkout_btn_continue="ico" class="sb_btn_ico dash"></div>
                 <div checkout_btn_continue="text" class="action_btn_text">Dashboard</div>
               </a>
@@ -108,7 +108,7 @@
           <a href="#" class="bttm_nav--link support cmdbhelp--nav w-inline-block">
             <div class="bttm_nav_link--text">Support</div>
           </a>
-          <a href="settings/account.html" class="bttm_nav--link settings w-inline-block">
+          <a href="settings/account" class="bttm_nav--link settings w-inline-block">
             <div class="bttm_nav_link--text">Settings</div>
           </a>
           <div class="user_btn--wrap">
@@ -180,7 +180,7 @@
                 <div class="skel_crd--v2">
                   <div class="skel_crd_bg--v2"></div>
                 </div>
-                <a href="new.html" class="sect_crd small2 w-inline-block">
+                <a href="new" class="sect_crd small2 w-inline-block">
                   <div class="sect_crd_tit_wrp w-clearfix">
                     <div class="rt_cta_ico absolute">
                       <div class="btn_ldr_wrp w-embed">
@@ -202,7 +202,7 @@
                 <div class="skel_crd--v2">
                   <div class="skel_crd_bg--v2"></div>
                 </div>
-                <a href="allocate.html" class="sect_crd small2 w-inline-block">
+                <a href="allocate" class="sect_crd small2 w-inline-block">
                   <div class="sect_crd_tit_wrp w-clearfix">
                     <div class="rt_cta_ico absolute">
                       <div class="btn_ldr_wrp w-embed">
@@ -224,7 +224,7 @@
                 <div class="skel_crd--v2">
                   <div class="skel_crd_bg--v2"></div>
                 </div>
-                <a href="settings/member.html" class="sect_crd small2 w-inline-block">
+                <a href="settings/member" class="sect_crd small2 w-inline-block">
                   <div class="sect_crd_tit_wrp w-clearfix">
                     <div class="rt_cta_ico absolute">
                       <div class="btn_ldr_wrp w-embed">
@@ -246,7 +246,7 @@
                 <div class="skel_crd--v2">
                   <div class="skel_crd_bg--v2"></div>
                 </div>
-                <a href="funds.html" class="sect_crd small2 w-inline-block">
+                <a href="funds" class="sect_crd small2 w-inline-block">
                   <div class="sect_crd_tit_wrp w-clearfix">
                     <div class="rt_cta_ico absolute">
                       <div class="btn_ldr_wrp w-embed">
@@ -313,7 +313,7 @@
                 <div class="skel_crd--v2">
                   <div class="skel_crd_bg--v2"></div>
                 </div>
-                <a href="settings/developers.html" class="sect_crd small2 w-inline-block">
+                <a href="settings/developers" class="sect_crd small2 w-inline-block">
                   <div class="sect_crd_tit_wrp w-clearfix">
                     <div class="rt_cta_ico absolute">
                       <div class="btn_ldr_wrp w-embed">
