--- a/public/new.html
+++ b/public/new.html
@@ -181,7 +181,7 @@
     <div class="page_content--container">
       <div class="pg_hdr">
         <div class="pg_hdr_content">
-          <a href="index.html" class="pg_hdr_close w-inline-block"></a>
+          <a href="index" class="pg_hdr_close w-inline-block"></a>
           <div class="pg_hdr_close_dvdr"></div>
           <div class="pg_hdr_txt_wrp">
             <div class="pg_hdr_tit">Add Proxies</div>
@@ -660,7 +660,7 @@
                         <div class="sect_crd_subtxt white">Wallet</div>
                       </div>
                       <div class="w-layout-cell rt_c link w-clearfix">
-                        <a href="funds.html" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
+                        <a href="funds" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
                           <div class="sect_crd_rt_cta_txt">Add Funds</div><img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
                         </a>
                       </div>
@@ -706,7 +706,7 @@
                             <div class="info--wrap sect-crd">
                               <div class="info_grid--wrap">
                                 <div class="w-layout-grid info_grid--item-explain one noborder">
-                                  <a href="settings/member.html" target="_blank" class="w-inline-block">
+                                  <a href="settings/member" target="_blank" class="w-inline-block">
                                     <div checkout_info_explain="member" class="info_item--text explain">Receive a generous discount when you&#x27;re an official member of one of our forum partners. <span class="info_explain--link">Enable Now</span></div>
                                   </a>
                                 </div>
@@ -718,7 +718,7 @@
                       <div class="w-layout-cell rt_c link">
                         <div class="tog_wrp">
                           <div cta="member_discount_apply" class="apply_link w-clearfix">
-                            <a href="settings/member.html" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
+                            <a href="settings/member" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
                               <div class="sect_crd_rt_cta_txt">Enable Discount</div><img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
                             </a>
                           </div>
