--- a/public/processing-payment.html
+++ b/public/processing-payment.html
@@ -78,17 +78,17 @@
               </div>
               <div class="w-layout-grid bgico_cta_grid">
                 <div class="bgico_cta_btn w-clearfix">
-                  <a href="new.html" class="sect_crd_rt_cta w-inline-block w-clearfix">
+                  <a href="new" class="sect_crd_rt_cta w-inline-block w-clearfix">
                     <div class="sect_crd_rt_cta_txt">Add Proxies</div><img src="images/arrow-right-thin.svg" loading="lazy" alt="" class="rt_cta_ico right">
                   </a>
                 </div>
                 <div class="bgico_cta_btn w-clearfix">
-                  <a href="allocate.html" class="sect_crd_rt_cta w-inline-block w-clearfix">
+                  <a href="allocate" class="sect_crd_rt_cta w-inline-block w-clearfix">
                     <div class="sect_crd_rt_cta_txt">Allocate Time</div><img src="images/arrow-right-thin.svg" loading="lazy" alt="" class="rt_cta_ico right">
                   </a>
                 </div>
                 <div class="bgico_cta_btn w-clearfix">
-                  <a href="dashboard.html" class="sect_crd_rt_cta w-inline-block w-clearfix">
+                  <a href="dashboard" class="sect_crd_rt_cta w-inline-block w-clearfix">
                     <div class="sect_crd_rt_cta_txt">Dashboard</div><img src="images/arrow-right-thin.svg" loading="lazy" alt="" class="rt_cta_ico right">
                   </a>
                 </div>
