--- a/public/settings/member.html
+++ b/public/settings/member.html
@@ -71,20 +71,20 @@
       <div id="nav_sb" class="nav_sb">
         <div class="w-layout-blockcontainer top_nav--wrp w-container">
           <div class="sb_logo--wrp">
-            <a href="../index.html" class="sb_logo_link--wrp w-inline-block"><img src="../images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
+            <a href="../index" class="sb_logo_link--wrp w-inline-block"><img src="../images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
           </div>
           <div class="top_nav_menu_link--wrp">
             <div class="top_nav_menu_items--wrp settings">
-              <a href="../index.html" class="top_nav--link back w-inline-block">
+              <a href="../index" class="top_nav--link back w-inline-block">
                 <div class="top_nav_link--text white">Settings</div>
               </a>
-              <a href="../settings/account.html" class="top_nav--link account w-inline-block">
+              <a href="../settings/account" class="top_nav--link account w-inline-block">
                 <div class="top_nav_link--text">Account</div>
               </a>
-              <a href="../settings/member.html" aria-current="page" class="top_nav--link member w-inline-block w--current">
+              <a href="../settings/member" aria-current="page" class="top_nav--link member w-inline-block w--current">
                 <div class="top_nav_link--text">Member Discount</div>
               </a>
-              <a href="../settings/developers.html" class="top_nav--link dev w-inline-block">
+              <a href="../settings/developers" class="top_nav--link dev w-inline-block">
                 <div class="top_nav_link--text">Developers</div>
               </a>
             </div>
@@ -209,7 +209,7 @@
     <div page_content="member_enable" class="page_content--container">
       <div class="pg_hdr">
         <div class="pg_hdr_content">
-          <a href="../index.html" class="pg_hdr_close w-inline-block"></a>
+          <a href="../index" class="pg_hdr_close w-inline-block"></a>
           <div class="pg_hdr_close_dvdr"></div>
           <div class="pg_hdr_txt_wrp">
             <div class="pg_hdr_tit">Enable Member Discount</div>
