--- a/public/allocate.html
+++ b/public/allocate.html
@@ -399,7 +399,7 @@
       <div id="nav_sb" class="nav_sb">
         <div class="w-layout-blockcontainer top_nav--wrp w-container">
           <div class="sb_logo--wrp">
-            <a href="index.html" class="sb_logo_link--wrp w-inline-block"><img src="images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
+            <a href="index" class="sb_logo_link--wrp w-inline-block"><img src="images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
           </div>
           <div class="srchbr--wrp">
             <div id="cmdb" class="cmd_bar"><img src="images/search-lg.svg" loading="lazy" width="14" height="14" alt="" class="image-14">
@@ -411,21 +411,21 @@
           </div>
           <div class="top_nav_menu_link--wrp">
             <div class="top_nav_menu_items--wrp">
-              <a href="index.html" class="top_nav--link start w-inline-block">
+              <a href="index" class="top_nav--link start w-inline-block">
                 <div class="top_nav_link--text">Get Started</div>
               </a>
-              <a href="new.html" class="top_nav--link add w-inline-block">
+              <a href="new" class="top_nav--link add w-inline-block">
                 <div class="top_nav_link--text">Add Proxies</div>
               </a>
-              <a href="allocate.html" aria-current="page" class="top_nav--link allocate w-inline-block w--current">
+              <a href="allocate" aria-current="page" class="top_nav--link allocate w-inline-block w--current">
                 <div class="top_nav_link--text">Extend Time</div>
               </a>
-              <a href="funds.html" class="top_nav--link wallet w-inline-block">
+              <a href="funds" class="top_nav--link wallet w-inline-block">
                 <div class="top_nav_link--text">Fund Wallet</div>
               </a>
             </div>
             <div class="sb_btn--wrp w-clearfix">
-              <a href="dashboard.html" class="sb_btn black w-inline-block w-clearfix">
+              <a href="dashboard" class="sb_btn black w-inline-block w-clearfix">
                 <div checkout_btn_continue="ico" class="sb_btn_ico dash"></div>
                 <div checkout_btn_continue="text" class="action_btn_text">Dashboard</div>
               </a>
@@ -436,7 +436,7 @@
           <a href="#" class="bttm_nav--link support cmdbhelp--nav w-inline-block">
             <div class="bttm_nav_link--text">Support</div>
           </a>
-          <a href="settings/account.html" class="bttm_nav--link settings w-inline-block">
+          <a href="settings/account" class="bttm_nav--link settings w-inline-block">
             <div class="bttm_nav_link--text">Settings</div>
           </a>
           <div class="user_btn--wrap">
@@ -459,7 +459,7 @@
         <div class="sect_crds_content--inner">
           <div class="sect_crd">
             <div class="sect_crd_tit_wrp w-clearfix">
-              <a href="funds.html" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
+              <a href="funds" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
                 <div class="sect_crd_rt_cta_txt">Add Funds</div><img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" width="15" alt="" class="rt_cta_ico">
               </a>
               <div class="sect_crd_tit w-clearfix">
@@ -580,7 +580,7 @@
           </div>
           <div class="sect_crd">
             <div class="sect_crd_tit_wrp w-clearfix">
-              <a href="new.html" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
+              <a href="new" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
                 <div class="sect_crd_rt_cta_txt">Add Proxies</div><img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
               </a>
               <div class="sect_crd_tit w-clearfix">
@@ -1167,7 +1167,7 @@
                     <div class="sect_crd_subtxt white">Wallet</div>
                   </div>
                   <div class="w-layout-cell rt_c link w-clearfix">
-                    <a href="funds.html" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
+                    <a href="funds" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
                       <div class="sect_crd_rt_cta_txt">Add Funds</div><img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
                     </a>
                   </div>
@@ -1211,7 +1211,7 @@
                         <div class="info--wrap sect-crd">
                           <div class="info_grid--wrap">
                             <div class="w-layout-grid info_grid--item-explain one noborder">
-                              <a href="settings/member.html" target="_blank" class="w-inline-block">
+                              <a href="settings/member" target="_blank" class="w-inline-block">
                                 <div checkout_info_explain="member" class="info_item--text explain">Receive a generous discount when you&#x27;re an official member of one of our forum partners. <span class="info_explain--link">Enable Now</span></div>
                               </a>
                             </div>
@@ -1223,7 +1223,7 @@
                   <div class="w-layout-cell rt_c link">
                     <div class="tog_wrp">
                       <div cta="member_discount_apply" class="apply_link w-clearfix">
-                        <a href="settings/member.html" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
+                        <a href="settings/member" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
                           <div class="sect_crd_rt_cta_txt">Enable Discount</div><img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
                         </a>
                       </div>
