--- a/public/funds.html
+++ b/public/funds.html
@@ -70,7 +70,7 @@
     <div class="page_content--container">
       <div class="pg_hdr">
         <div class="pg_hdr_content">
-          <a href="index.html" class="pg_hdr_close w-inline-block"></a>
+          <a href="index" class="pg_hdr_close w-inline-block"></a>
           <div class="pg_hdr_close_dvdr"></div>
           <div class="pg_hdr_txt_wrp">
             <div class="pg_hdr_tit">Add Funds</div>
