--- a/public/settings/account.html
+++ b/public/settings/account.html
@@ -200,20 +200,20 @@ input[type=number] {
       <div id="nav_sb" class="nav_sb">
         <div class="w-layout-blockcontainer top_nav--wrp w-container">
           <div class="sb_logo--wrp">
-            <a href="../index.html" class="sb_logo_link--wrp w-inline-block"><img src="../images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
+            <a href="../index" class="sb_logo_link--wrp w-inline-block"><img src="../images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
           </div>
           <div class="top_nav_menu_link--wrp">
             <div class="top_nav_menu_items--wrp settings">
-              <a href="../index.html" class="top_nav--link back w-inline-block">
+              <a href="../index" class="top_nav--link back w-inline-block">
                 <div class="top_nav_link--text white">Settings</div>
               </a>
-              <a href="../settings/account.html" aria-current="page" class="top_nav--link account w-inline-block w--current">
+              <a href="../settings/account" aria-current="page" class="top_nav--link account w-inline-block w--current">
                 <div class="top_nav_link--text">Account</div>
               </a>
-              <a href="../settings/member.html" class="top_nav--link member w-inline-block">
+              <a href="../settings/member" class="top_nav--link member w-inline-block">
                 <div class="top_nav_link--text">Member Discount</div>
               </a>
-              <a href="../settings/developers.html" class="top_nav--link dev w-inline-block">
+              <a href="../settings/developers" class="top_nav--link dev w-inline-block">
                 <div class="top_nav_link--text">Developers</div>
               </a>
             </div>
