Correct internal navigation links
All internal navigation links have been updated from 'index' to use the root directory ('/'). This correction ensures that users are properly redirected, enhancing overall navigation within the site.

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -416,7 +416,7 @@ input[type=number] {
     <div id="nav_sb" class="nav_sb">
       <div class="w-layout-blockcontainer top_nav--wrp w-container">
         <div class="sb_logo--wrp">
-          <a href="index" class="sb_logo_link--wrp w-inline-block"><img src="images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
+          <a href="/" class="sb_logo_link--wrp w-inline-block"><img src="images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
         </div>
         <div class="srchbr--wrp">
           <div id="cmdb" class="cmd_bar"><img src="images/search-lg.svg" loading="lazy" width="14" height="14" alt="" class="image-14">
@@ -428,7 +428,7 @@ input[type=number] {
         </div>
         <div class="top_nav_menu_link--wrp">
           <div class="top_nav_menu_items--wrp">
-            <a href="index" class="top_nav--link start w-inline-block">
+            <a href="/" class="top_nav--link start w-inline-block">
               <div class="top_nav_link--text">Get Started</div>
             </a>
             <a href="new" class="top_nav--link add w-inline-block">
