--- a/public/start.html
+++ b/public/start.html
@@ -71,7 +71,7 @@
       <div id="nav_sb" class="nav_sb">
         <div class="w-layout-blockcontainer top_nav--wrp w-container">
           <div class="sb_logo--wrp">
-            <a href="index" aria-current="page" class="sb_logo_link--wrp w-inline-block w--current"><img src="images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
+            <a href="/" aria-current="page" class="sb_logo_link--wrp w-inline-block w--current"><img src="images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
           </div>
           <div class="srchbr--wrp">
             <div id="cmdb" class="cmd_bar"><img src="images/search-lg.svg" loading="lazy" width="14" height="14" alt="" class="image-14">
@@ -83,7 +83,7 @@
           </div>
           <div class="top_nav_menu_link--wrp">
             <div class="top_nav_menu_items--wrp">
-              <a href="index" aria-current="page" class="top_nav--link start w-inline-block w--current">
+              <a href="/" aria-current="page" class="top_nav--link start w-inline-block w--current">
                 <div class="top_nav_link--text">Get Started</div>
               </a>
               <a href="new" class="top_nav--link add w-inline-block">
