Removed tracking of user's IP address
The tracking of the user's IP address has been removed from multiple pages to ensure user privacy. The corresponding scripts that accomplished this task have been deleted from sign in, sign-up, and other related pages.

--- a/public/settings/member.html
+++ b/public/settings/member.html
@@ -50,12 +50,7 @@
   }
 }
 </style>
-  <!-- <script type="application/javascript">
-  function getIP(json) { 
-    sessionStorage.setItem('ip_address', json.ip);
-  }
-</script>
-<script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script> -->
+
   <link rel="stylesheet" href="https://styles.illusory.io/css/members.full.css">
 </head>
 <body class="body dark">
@@ -71,11 +66,11 @@
       <div id="nav_sb" class="nav_sb">
         <div class="w-layout-blockcontainer top_nav--wrp w-container">
           <div class="sb_logo--wrp">
-            <a href="../index" class="sb_logo_link--wrp w-inline-block"><img src="../images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
+            <a href="/" class="sb_logo_link--wrp w-inline-block"><img src="../images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
           </div>
           <div class="top_nav_menu_link--wrp">
             <div class="top_nav_menu_items--wrp settings">
-              <a href="../index" class="top_nav--link back w-inline-block">
+              <a href="/" class="top_nav--link back w-inline-block">
                 <div class="top_nav_link--text white">Settings</div>
               </a>
               <a href="../settings/account" class="top_nav--link account w-inline-block">
@@ -209,12 +204,11 @@
     <div page_content="member_enable" class="page_content--container">
       <div class="pg_hdr">
         <div class="pg_hdr_content">
-          <a href="../index" class="pg_hdr_close w-inline-block"></a>
+          <a href="../settings/account" class="pg_hdr_close w-inline-block"></a>
           <div class="pg_hdr_close_dvdr"></div>
           <div class="pg_hdr_txt_wrp">
             <div class="pg_hdr_tit">Enable Member Discount</div>
           </div>
-          <div id="cmdb" class="cmdb_hide"></div>
         </div>
       </div>
       <div class="page_content--inner">
