Delete dev-module.html and clean up user IP tracking
The 'dev-module.html' file has been removed from the codebase. As part of this change, we have stopped tracking the user's IP address to respect user privacy. All related scripts involved in IP tracking have been eliminated from corresponding pages like sign in, signup, and more.

--- a/public/funds.html
+++ b/public/funds.html
@@ -203,7 +203,7 @@
                           <div checkout_upcoming="expiring_soon" class="sect_crd_subtxt white">$0</div>
                         </div>
                       </div>
-                      <div funds_line="required" class="w-layout-grid qstack_c2">
+                      <div funds_line="required" class="w-layout-grid qstack_c2 hide">
                         <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt_wrp">
                             <div class="sect_crd_subtxt white">Total Upcoming</div>
@@ -240,7 +240,7 @@
                           <div due_total="5" due="total" class="sect_crd_subtxt purple">$5</div>
                         </div>
                       </div>
-                      <div funds_line="required" class="w-layout-grid qstack_c2">
+                      <div funds_line="required" class="w-layout-grid qstack_c2 hide">
                         <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt_wrp">
                             <div class="sect_crd_subtxt white">Funds Required</div>
