Hide 'Funds Required' display on funds page
Changed the 'Funds Required' display from visible to hidden by adjusting the HTML attributes in the funds.html file. This change was made to enhance user experience, allowing them to view necessary information without seeing any potentially confusing or unnecessary data.

--- a/public/funds.html
+++ b/public/funds.html
@@ -285,7 +285,7 @@
                           <div checkout_funds="after" class="sect_crd_subtxt green">$0</div>
                         </div>
                       </div>
-                      <div funds_line="required" class="w-layout-grid qstack_c2">
+                      <div funds_line="required" class="w-layout-grid qstack_c2 hide">
                         <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt_wrp">
                             <div class="sect_crd_subtxt white">Funds Required</div>
