--- a/public/funds.html
+++ b/public/funds.html
@@ -203,7 +203,7 @@
                           <div checkout_upcoming="expiring_soon" class="sect_crd_subtxt white">$0</div>
                         </div>
                       </div>
-                      <div funds_line="required" class="w-layout-grid qstack_c2 hide">
+                      <div funds_line="upcoming" class="w-layout-grid qstack_c2">
                         <div class="w-layout-cell lt_c">
                           <div class="sect_crd_subtxt_wrp">
                             <div class="sect_crd_subtxt white">Total Upcoming</div>
@@ -240,17 +240,6 @@
                           <div due_total="5" due="total" class="sect_crd_subtxt purple">$5</div>
                         </div>
                       </div>
-                      <div funds_line="required" class="w-layout-grid qstack_c2 hide">
-                        <div class="w-layout-cell lt_c">
-                          <div class="sect_crd_subtxt_wrp">
-                            <div class="sect_crd_subtxt white">Funds Required</div>
-                            <div class="checkout_tit_err_ico"></div>
-                          </div>
-                        </div>
-                        <div class="w-layout-cell rt_c">
-                          <div checkout_funds="required" class="sect_crd_subtxt orange">$0</div>
-                        </div>
-                      </div>
                     </div>
                   </div>
                   <div class="checkout_content_sect">
@@ -283,17 +272,6 @@
                         </div>
                         <div class="w-layout-cell rt_c">
                           <div checkout_funds="after" class="sect_crd_subtxt green">$0</div>
-                        </div>
-                      </div>
-                      <div funds_line="required" class="w-layout-grid qstack_c2 hide">
-                        <div class="w-layout-cell lt_c">
-                          <div class="sect_crd_subtxt_wrp">
-                            <div class="sect_crd_subtxt white">Funds Required</div>
-                            <div class="checkout_tit_err_ico"></div>
-                          </div>
-                        </div>
-                        <div class="w-layout-cell rt_c">
-                          <div checkout_funds="required" class="sect_crd_subtxt orange">$0</div>
                         </div>
                       </div>
                     </div>
