Add 'Read Docs' link to proxy connection information
A 'Read Docs' link has been added to the proxy connection instructions on the server dashboard. The link, which takes users to a separate page for further reading, aims to provide more detailed guidance for users setting up their proxy connections. This change improves user comprehension and reduces potential misconfigurations.

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -783,7 +783,10 @@
                                 <div class="info--wrap modal">
                                   <div class="info_grid--wrap">
                                     <div crd_expires_explain="VR-US-LA2-1004" class="w-layout-grid info_grid--item-explain one noborder">
-                                      <div modal_info_explain="auth" class="info_item--text explain">Use the server IP and either SOCKS5 or HTTP port to connect to your proxy.</div>
+                                      <a href="settings/member" target="_blank" class="w-inline-block">
+                                        <div modal_info_explain="auth" class="info_item--text explain">Use the server IP and either SOCKS5 or HTTP port to connect to your proxy. <span class="info_explain--link">Read Docs</span>
+                                        </div>
+                                      </a>
                                     </div>
                                   </div>
                                 </div>
