Correct URL paths in member discount links
The URL paths to member discount settings in the new, allocate, and dashboard pages have been updated. Also, on the dashboard page, the connection instructions link has been directed to the appropriate documentation page. These changes ensure that users are correctly directed to the intended pages upon clicking the links.

--- a/public/new.html
+++ b/public/new.html
@@ -701,7 +701,7 @@
                             <div class="info--wrap sect-crd">
                               <div class="info_grid--wrap">
                                 <div class="w-layout-grid info_grid--item-explain one noborder">
-                                  <a href="settings/member" target="_blank" class="w-inline-block">
+                                  <a href="..settings/member" target="_blank" class="w-inline-block">
                                     <div checkout_info_explain="member" class="info_item--text explain">Receive a generous discount when you&#x27;re an official member of one of our forum partners. <span class="info_explain--link">Enable Now</span></div>
                                   </a>
                                 </div>
