--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -782,7 +782,7 @@
                               <div class="modal_info_icon--wrap w-clearfix"><img src="images/info-circle-duo-2.svg" loading="lazy" alt="" class="info_circle_duo--icon">
                                 <div class="info--wrap modal">
                                   <div class="info_grid--wrap">
-                                    <div crd_expires_explain="VR-US-LA2-1004" class="w-layout-grid info_grid--item-explain one noborder">
+                                    <div class="w-layout-grid info_grid--item-explain one noborder">
                                       <a href="..docs/connect/introduction" target="_blank" class="w-inline-block">
                                         <div modal_info_explain="auth" class="info_item--text explain">Use the server IP and either SOCKS5 or HTTP port to connect to your proxy. <span class="info_explain--link">View Docs</span>
                                         </div>
