Fix broken links in new, allocate, and dashboard pages
The path of several hyperlinks within the HTML files of new.html, allocate.html, and dashboard.html has been corrected. Previously, incorrect URLs were causing issues in navigation and potentially confusing users. The changes aim to improve user experience by ensuring all links redirect to the correct destinations as intended.

--- a/public/settings/member.html
+++ b/public/settings/member.html
@@ -432,7 +432,7 @@
               </div>
               <div class="sect_block--divider"></div>
               <div class="w-layout-grid cta_crd--grid small">
-                <a href="/docs/account/member" class="sect_crd small2 w-inline-block">
+                <a href="../docs/account/member" target="_blank" class="sect_crd small2 w-inline-block">
                   <div class="sect_crd_tit_wrp">
                     <div class="sect_crd_tit">
                       <div class="sect_crd_tit_txt">Step Tutorial</div>
