Update hyperlink in new.html
The hyperlink originally marked as "Stock Alerts" in new.html has been updated to "Purchase Guide" and now redirects to the correct documentation page. This adjustment not only fixes a broken link but also aids in user navigation by providing a more accurate and relevant resource.

--- a/public/new.html
+++ b/public/new.html
@@ -191,8 +191,8 @@
               <div class="sect_crd_tit_wrp">
                 <div class="sect_crd_tit w-clearfix">
                   <div class="sect_crd_tit_txt"> Add 5G Proxies (<span available_proxies="total">0</span>)</div>
-                  <a href="#" class="sect_crd_rt_cta hide w-inline-block w-clearfix">
-                    <div class="sect_crd_rt_cta_txt">Stock Alerts</div><img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
+                  <a href="docs/proxy-management/proxy-add" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
+                    <div class="sect_crd_rt_cta_txt">Purchase Guide</div><img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
                   </a>
                   <div class="sect_crd_subtxt">Add proxies to your account</div>
                 </div>
