Adjust checkout button properties in allocate.html
Changed the checkout button from a hyperlink tag to a div container in allocate.html. Other relevant attributes have been accordingly adjusted to ensure it serves its visual and functional purposes correctly. This modification increases the flexibility in layout design and interactive behaviors for better user experience.

--- a/public/allocate.html
+++ b/public/allocate.html
@@ -1243,7 +1243,7 @@
                   </div>
                 </div>
               </div>
-              <a checkout_btn="issue" href="https://app.illusory.io/funds" target="_blank" class="checkout_btn issue w-inline-block">
+              <div checkout_btn="issue" class="checkout_btn issue w-clearfix">
                 <div checkout_btn_issue="text" class="action_btn_text">Add Required Funds</div>
                 <div checkout_btn="ico" class="checkout_btn_ico external">
                   <div class="btn_ldr_wrp w-embed">
@@ -1251,7 +1251,7 @@
                     </lottie-player>
                   </div>
                 </div>
-              </a>
+              </div>
             </div>
           </div>
         </div>
