--- a/public/creating-account.html
+++ b/public/creating-account.html
@@ -88,7 +88,7 @@
                   <a cta="support" href="#" class="sect_crd_rt_cta hide w-inline-block w-clearfix">
                     <div class="sect_crd_rt_cta_txt">Taking too long? Contact support</div><img src="app/images/message-text-square-02.svg" loading="lazy" width="21" height="" alt="" class="rt_cta_ico right_alt-1">
                   </a>
-                  <div class="lott-dots" data-animation-type="lottie" data-src="documents/loading-line1.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="2"></div>
+                  <div class="lott-dots" data-animation-type="lottie" data-src="app/documents/loading-line1.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="2"></div>
                 </div>
               </div>
             </div>
@@ -99,7 +99,7 @@
         <div class="pymnt_optn_wrp w-clearfix">
           <div back_btn="options" class="go_back_link w-clearfix">
             <div id="modCancBtnIco" class="btn_icon back">
-              <div id="modCancBtnLdr" class="lottie_btn_ldr" data-animation-type="lottie" data-src="documents/chipped-circle-loader-v3.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="1" data-duration="0.65"></div>
+              <div id="modCancBtnLdr" class="lottie_btn_ldr" data-animation-type="lottie" data-src="app/documents/chipped-circle-loader-v3.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="1" data-duration="0.65"></div>
             </div>
             <div class="action_btn_text">Go Back</div>
           </div>
